# djraj-project

./: .gitignore  README.md  pyproject.toml  up.sql
forums/: auth.py  blocking.py  config.py  ioutil.py  main.py  models.py  utils.py
forums/db/: categories.py  post_attachment.py  posts.py  topic_attachment.py  topics.py  users.py  utils.py
forums/routes/: __init__.py  auth.py  categories.py  login.py  pages.py  profile.py  system.py  topic.py
front end/: index.html  script.js  signup.html
static/: forum.html  login.html  style.css
templates/: add_attachment.html  cat_index.html  edit_post.html  edit_topic.html  footer.html  header.html  index.html  login.html  macros.html  new_category.html  new_topic.html  profile_page.html  register.html  search.html  topic.html  topic_list.html
