[tool.poetry]
name = "djraj-proj"
version = "0.1.0"
description = "Introduction to Software Engineering Project"
authors = ["Aurora McGinnis <amcginnis@unomaha.edu>", "Jerron Pierro <jpierro@unomaha.edu>", "Rashawn Thompson <rashawnthompson@unomaha.edu>", "Deepak Sai Guntreddi <dguntreddi@unomaha.edu>", "Jeevan Kumar Reddy Papireddy <jpapireddy@unomaha.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
aiomysql = "^0.2.0"
argon2-cffi = "^23.1.0"
pyjwt = "^2.8.0"
httpx = "^0.27.0"
pytest = "^8.1.1"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
